# HTML5-Canvas-Graph-Generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindFRNETLIB.cmake
include/: CanvasContext.h  HTMLBarChart.h  HTMLGraph.h  HTMLGraphFrame.h  HTMLLineChart.h
src/: HTMLBarChart.cpp  HTMLGraphFrame.cpp  HTMLLineChart.cpp
